--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
                   <p>+962 7955 70175</p>
                 </div>
 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3383.803861701866!2d35.8595291150912!3d31.993332081215605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151ca1c8a7b11e1f%3A0x4c649957c98962b3!2sWasfi%20At-Tall%20St.%2C%20Amman!5e0!3m2!1sen!2sjo!4v1675011434131!5m2!1sen!2sjo" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3383.803861701866!2d35.8595291150912!3d31.993332081215605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151ca1c8a7b11e1f%3A0x4c649957c98962b3!2sWasfi%20At-Tall%20St.%2C%20Amman!5e0!3m2!1sen!2sjo!4v1675011434131!5m2!1sen!2sjo" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
               </div>
             </div>
 
