--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
   </head>
 
   <body>
-    <!-- ======= Mobile nav toggle button ======= -->
     <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
-
-    <!-- ======= Header ======= -->
     <header id="header">
       <div class="d-flex flex-column">
         <div class="profile">
@@ -120,12 +117,9 @@
             </li>
           </ul>
         </nav>
-        <!-- .nav-menu -->
       </div>
     </header>
-    <!-- End Header -->
 
-    <!-- ======= Hero Section ======= -->
     <section
       id="hero"
       class="d-flex flex-column justify-content-center align-items-center"
@@ -141,10 +135,8 @@
         </p>
       </div>
     </section>
-    <!-- End Hero -->
 
     <main id="main">
-      <!-- ======= About Section ======= -->
       <section id="about" class="about">
         <div class="container">
           <div class="section-title">
@@ -221,9 +213,7 @@
           </div>
         </div>
       </section>
-      <!-- End About Section -->
 
-      <!-- ======= Skills Section ======= -->
       <section id="skills" class="skills section-bg">
         <div class="container">
           <div class="section-title">
@@ -386,9 +376,7 @@
           </div>
         </div>
       </section>
-      <!-- End Skills Section -->
 
-      <!-- ======= Resume Section ======= -->
       <section id="resume" class="resume">
         <div class="container">
           <div class="section-title">
@@ -521,9 +509,7 @@
           </div>
         </div>
       </section>
-      <!-- End Resume Section -->
 
-      <!-- ======= Portfolio Section ======= -->
       <!-- <section id="portfolio" class="portfolio section-bg">
         <div class="container">
           <div class="section-title">
@@ -752,9 +738,7 @@
           </div>
         </div>
       </section> -->
-      <!-- End Portfolio Section -->
 
-      <!-- ======= Services Section ======= -->
       <section id="services" class="services">
         <div class="container">
           <div class="section-title">
@@ -816,9 +800,7 @@
           </div>
         </div>
       </section>
-      <!-- End Services Section -->
 
-      <!-- ======= Testimonials Section ======= -->
       <!-- <section id="testimonials" class="testimonials section-bg">
         <div class="container">
           <div class="section-title">
@@ -984,17 +966,17 @@
                   <p>+962 7955 70175</p>
                 </div>
 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3383.803861701866!2d35.8595291150912!3d31.993332081215605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151ca1c8a7b11e1f%3A0x4c649957c98962b3!2sWasfi%20At-Tall%20St.%2C%20Amman!5e0!3m2!1sen!2sjo!4v1675011434131!5m2!1sen!2sjo" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3383.803861701866!2d35.8595291150912!3d31.993332081215605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151ca1c8a7b11e1f%3A0x4c649957c98962b3!2sWasfi%20At-Tall%20St.%2C%20Amman!5e0!3m2!1sen!2sjo!4v1675011434131!5m2!1sen!2sjo"
+                  frameborder="0"
+                  style="border: 0; width: 100%; height: 290px"
+                  allowfullscreen
+                ></iframe>
               </div>
             </div>
 
             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-              <form
-                action="forms/contact.php"
-                method="post"
-                role="form"
-                class="php-email-form"
-              >
+              <form id="sendEmail" role="form" class="php-email-form" method="POST" action="https://nodejsenderemail.herokuapp.com/api/sendEmail">
                 <div class="row">
                   <div class="form-group col-md-6">
                     <label for="name">Your Name</label>
@@ -1032,21 +1014,24 @@
                   <textarea
                     class="form-control"
                     name="message"
+                    id="message"
                     rows="10"
                     required
                   ></textarea>
                 </div>
                 <div class="my-3">
                   <div class="loading">Loading</div>
-                  <div class="error-message"></div>
+                  <div class="error-message">Some fields are missing!</div>
                   <div class="sent-message">
                     Your message has been sent. Thank you!
                   </div>
                 </div>
                 <div class="text-center">
-                  <button type="submit">Send Message</button>
-                </div>
-              </form>
+                  <button type="submit">
+                    Send Message
+                  </button>
+                </form>
+              </div>
             </div>
           </div>
         </div>
