--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                 <h5>2018 - 2022</h5>
                 <p><em>Al-Ahliyaa Amman University</em></p>
                 <p>
-                  Good knowledge of Problem-Solving, Algorithms, Data Structure,
+                  Good knowledge of Problem-Solving, Algorithms, OOP, Data Structure,
                   Distributed Systems, and Computer Architecture
                   <br />Computer Science (GPA <b style="color: red">3.45</b>).
                 </p>
@@ -430,7 +430,7 @@
                 <h4>Udemy Online Course</h4>
                 <h5>AUG 2020 - 2020 OCT</h5>
                 <p><em>Online — Certificate</em></p>
-                <p>Took a Javascript course.</p>
+                <p>Took a HTML, CSS, Javascript, Nodejs, MongoDB, Laravel, PHP course.</p>
               </div>
             </div>
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
